doc: (fixes #973) Fix the dark mode issues

--- a/doc/ns3_html_theme/static/ns3_stylesheet.css
+++ b/doc/ns3_html_theme/static/ns3_stylesheet.css
@@ -353,4 +353,16 @@ div.sphinxsidebar a {
         background-color: #ceccca;
         padding: 3px;
     }
+
+    #ns3_home1 img {
+        background-color: transparent;
+    }
+
+    img.footer {
+        background-color: transparent;
+    }
+
+    #nav-sync img {
+        background-color: transparent;
+    }
 }
